--- a/src/css/index.css
+++ b/src/css/index.css
@@ -31,21 +31,20 @@ main {
 }
 .timer__counter {
     margin: 0 auto 30px;
-    text-shadow: 10px 10px 15px rgba(0, 0, 0, 0.7);
     color: var(--productivity-color);
     font-size: 6rem;
 }
 .timer__btn {
-    display: none;
+    display: inline-block;
     width: 100%;
-    margin-top: 10px;
-    padding: 15px;
-    box-shadow: 20px 15px 20px 20px rgba(0, 0, 0, 0.7);
+    height: 60px;
+    margin-top: 30px;
+    opacity: 0;
+    background-color: var(--secondary-color);
     font-size: 2rem;
 }
 .timer__btn--start {
-    display: inline-block;
-    background-color: var(--secondary-color);
+    opacity: 1;
 }
 .timer__counter--rest {
     color: var(--rest-color);
