add button hover style

--- a/src/components/Timer/style.css
+++ b/src/components/Timer/style.css
@@ -26,6 +26,11 @@
     font-size: 2rem;
     font-weight: bold;
     cursor: pointer;
+    outline: none;
+    transition: 150ms border;
+}
+.timer__btn:hover, .timer__btn:focus {
+    border: 8px solid var(--variation-color);
 }
 .timer__btn--disabled {
     opacity: 0;
@@ -51,7 +56,7 @@
     flex-direction: column;
 }
 .productivity__title {
-    padding-top: 50px;
+    padding-top: 30px;
     font-size: 2.5rem;
     font-weight: bold;
 }
