--- a/src/components/Timer/style.css
+++ b/src/components/Timer/style.css
@@ -11,7 +11,7 @@
 }
 .timer__counter {
     margin: 0 auto 30px;
-    color: var(--productivity-color);
+    color: var(--color-productivity);
     font-size: 6rem;
 }
 .timer__btn {
@@ -19,10 +19,10 @@
     width: 100%;
     height: 60px;
     margin-top: 30px;
-    border: 2px solid var(--variation-color);
+    border: 2px solid var(--color-variation);
     border-radius: 25px;
     opacity: 1;
-    background-color: var(--secondary-color);
+    background-color: var(--color-secondary);
     font-size: 2rem;
     font-weight: bold;
     cursor: pointer;
@@ -30,41 +30,41 @@
     transition: 150ms border;
 }
 .timer__btn:hover, .timer__btn:focus {
-    border: 8px solid var(--variation-color);
+    border: 8px solid var(--color-variation);
 }
 .timer__btn--disabled {
     opacity: 0;
     cursor: auto;
 }
 .timer__counter--rest {
-    color: var(--rest-color);
+    color: var(--color-rest);
 }
 
 
-.container__productivity {
+.container__focus {
     width: 100%;
     height: 100vh;
-    background-color: var(--variation-color);
-    color: var(--white);
+    background-color: var(--color-variation);
+    color: var(--color-white);
     scroll-snap-align: start;
 }
-.productivity__info {
+.focus__info {
     display: flex;
     width: 80%;
     height: 100%;
     margin: 0 auto;
     flex-direction: column;
 }
-.productivity__title {
+.focus__title {
     padding-top: 80px;
     font-size: 2.5rem;
     font-weight: bold;
 }
-.productivity__time {
+.focus__time {
     margin: 10px 0;
     font-size: 2rem;
 }
-.productivity__total {
+.focus__total {
     margin: auto 0 30px auto;
     font-size: 2.5rem;
 }
