--- a/src/components/FocusTime/style.css
+++ b/src/components/FocusTime/style.css
@@ -1,6 +1,6 @@
 .container__focus {
     width: 100%;
-    height: 100vh;
+    height: var(--height-main);
     background-color: var(--color-variation);
     color: var(--color-white);
     scroll-snap-align: start;
@@ -13,7 +13,7 @@
     flex-direction: column;
 }
 .focus__title {
-    padding-top: 80px;
+    padding-top: 15px;
     font-size: 2.5rem;
     font-weight: bold;
 }
@@ -22,6 +22,6 @@
     font-size: 2rem;
 }
 .focus__total {
-    margin: auto 0 30px auto;
+    margin: auto 0 20px auto;
     font-size: 2.5rem;
 }
