--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,14 +1,22 @@
 header {
-    position: fixed;
+    display: flex;
     width: 100%;
     height: 50px;
-    padding-top: 5px;
+    padding: 0 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     background-color: var(--color-productivity);
     color: var(--color-white);
     text-align: center;
-    font-size: 1.2rem;
-    font-weight: bold;
+    font-size: 1.5rem;
+    font-weight: 600;
+    justify-content: space-between;
+    align-items: center;
+}
+header svg {
+    fill: var(--color-white);
+}
+header a:nth-of-type(2) {
+    margin-top: 4px;
 }
 
 .header--rest {
