--- a/src/components/Timer/style.css
+++ b/src/components/Timer/style.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 80%;
     min-width: 300px;
-    height: 100vh;
+    height: var(--height-main);
     margin: 0 auto;
     flex-direction: column;
     justify-content: center;
@@ -19,7 +19,7 @@
     width: 100%;
     height: 60px;
     margin-top: 30px;
-    border: 2px solid var(--color-variation);
+    border: 3px solid var(--color-variation);
     border-radius: 25px;
     opacity: 1;
     background-color: var(--color-secondary);
@@ -29,7 +29,7 @@
     outline: none;
     transition: 150ms border;
 }
-.timer__btn:hover, .timer__btn:focus {
+.timer__btn:focus {
     border: 8px solid var(--color-variation);
 }
 .timer__btn--disabled {
