change to dark mode

--- a/src/globals.css
+++ b/src/globals.css
@@ -4,12 +4,18 @@
     box-sizing: border-box;
 }
 :root {
-    --color-primary: #f2dedc;
+    /* --color-primary: #f2dedc;
     --color-secondary: #00c3dd;
     --color-variation: #4f4e8f;
     --color-productivity: #9e3f3f;
     --color-rest: #8fb627;
-    --color-white: #fafbfd;
+    --color-white: #fafbfd; */
+    --color-primary: #121212;
+    --color-secondary: #B5B0B0;
+    --color-variation: #4A2A2A;
+    --color-productivity: #902923;
+    --color-rest: #6AB547;
+    --color-white: #C0BAB2;
     --height-main: calc(100vh - 50px);
 }
 body {
