--- a/src/components/FocusTime/style.css
+++ b/src/components/FocusTime/style.css
@@ -25,3 +25,10 @@
     margin: auto 0 20px auto;
     font-size: 2.5rem;
 }
+
+
+@media only screen and (min-width: 600px) {
+    .focus__info {
+        padding-left: 20px;
+    }
+}
