--- a/src/components/FocusTime/style.css
+++ b/src/components/FocusTime/style.css
@@ -21,14 +21,46 @@
     margin: 10px 0;
     font-size: 2rem;
 }
+.focus__footer {
+    margin: auto 0 20px;
+}
+.focus__btn {
+    width: 100%;
+    height: 50px;
+    border: 3px solid var(--color-primary);
+    border-radius: 25px;
+    background-color: var(--color-secondary);
+    color: var(--color-primary);
+    font-size: 2rem;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;
+    transition: 150ms border;
+}
+.focus__btn:focus {
+    border: 6px solid var(--color-primary);
+}
 .focus__total {
-    margin: auto 0 20px auto;
+    margin-top: 10px;
     font-size: 2.5rem;
+    text-align: center;
 }
 
 
 @media only screen and (min-width: 600px) {
     .focus__info {
         padding-left: 20px;
+    }
+    .focus__footer {
+        display: flex;
+        justify-content: space-between;
+    }
+    .focus__btn {
+        width: 40%;
+        height: 55px;
+    }
+    .focus__total {
+        margin-top: 0;
+        font-size: 3rem;
     }
 }
