--- a/src/components/Timer/style.css
+++ b/src/components/Timer/style.css
@@ -54,6 +54,21 @@
     opacity: 0.5;
     fill: var(--color-primary);
     stroke: var(--color-secondary);
+    animation-name: scrolldown;
+    animation-duration: 2s;
+    animation-iteration-count: 3;
+}
+
+@keyframes scrolldown {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
 
