--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -12,10 +12,34 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-header svg {
+.header__icon {
     fill: var(--color-white);
 }
-header a:nth-of-type(2) {
+.pomodoro--dark {
+    fill: black;
+}
+.toggle--dark {
+    display: none;
+}
+.toggle--dark + label {
+    cursor: pointer;
+    display: inline-block;
+    width: 3rem;
+    height: 1.5rem;
+    border-radius: 10px;
+    background-color: var(--color-secondary);
+    position: relative;
+}
+.toggle--dark + label::after {
+    position: absolute;
+    content: "";
+    width: 1.8rem;
+    height: 1.8rem;
+    border-radius: 50%;
+    background-color: var(--color-variation);
+    top: -0.1rem;
+}
+.header__icon--github {
     margin-top: 4px;
 }
 
