--- a/src/components/Timer/style.css
+++ b/src/components/Timer/style.css
@@ -49,7 +49,7 @@
 }
 .timer__scroll-down {
     position: absolute;
-    left: calc(50% - 5px);
+    left: calc(50% - 14px);
     bottom: 20px;
     opacity: 0.5;
     fill: var(--color-primary);
@@ -57,6 +57,9 @@
     animation-name: scrolldown;
     animation-duration: 2s;
     animation-iteration-count: 3;
+}
+body.force-light .timer__scroll-down {
+    opacity: 1;
 }
 
 @keyframes scrolldown {
@@ -78,5 +81,8 @@
     }
     .timer__counter {
         font-size: 9rem;
+    }
+    .timer__scroll-down {
+        left: calc(50% - 5px);
     }
 }
