--- a/src/components/FocusTime/style.css
+++ b/src/components/FocusTime/style.css
@@ -18,6 +18,10 @@
     font-weight: bold;
 }
 .focus__time {
+    display: grid;
+    height: 100%;
+    grid-template-rows: repeat(auto-fill, 40px);
+    grid-auto-flow: column;
     margin: 10px 0;
     font-size: 2rem;
 }
@@ -27,6 +31,7 @@
 .focus__btn {
     width: 100%;
     height: 50px;
+    margin: auto 0;
     border: 3px solid var(--color-primary);
     border-radius: 25px;
     background-color: var(--color-secondary);
