--- a/src/components/Timer/style.css
+++ b/src/components/Timer/style.css
@@ -78,8 +78,10 @@
 }
 .timer__scroll-down {
     position: absolute;
-    left: calc(50% - 14px);
+    left: calc(50% - 15px);
     bottom: 20px;
+    border-radius: 15px;
+    background-color: var(--color-primary);
     opacity: 0.5;
     fill: var(--color-primary);
     stroke: var(--color-secondary);
@@ -88,7 +90,7 @@
     animation-iteration-count: 3;
 }
 body.force-light .timer__scroll-down {
-    opacity: 1;
+    opacity: 0.8;
 }
 
 @keyframes scrolldown {
@@ -119,6 +121,6 @@ body.force-light .timer__scroll-down {
         font-size: 9rem;
     }
     .timer__scroll-down {
-        left: calc(50% - 5px);
+        left: calc(50% - 4px);
     }
 }
